--- a/exercise10.html
+++ b/exercise10.html
@@ -9,17 +9,21 @@
             background-color: #5c92fd;
             color: white !important;
         }
+        @media(max-width:576px){
+            pre{
+                width: fit-content;
+            }
+        }
     </style>
 </head>
 <body>
-    <h2>HTML Exercise 2 Solution 10 - Experimenting Subscript and Superscript tags</h2>
+    <h2>HTML Exercise 2 Solution 10 - Setting up a link to another page within the same website</h2>
     <br>
     <h3>Exercise</h3>
-    <p>Experiment with the subscript and superscript tags.</p>
+    <p>Set up a link to another page within the same website.</p>
     <br>
     <h3>Solution</h3>
-    <p>To use Subscript in HTML you use the sub element ( &lt;sub&gt; &lt;/sub&gt; ) </p>
-    <p>To use Superscript in HTML you use the sup element ( &lt;sup&gt; &lt;/sup&gt; ) </p>
+    <p>The anchor element ( &lt;a&gt; &lt;/a&gt; ) is used to set up links. In the hyper reference attribute (href="") you specify the name of the page it should navigate to within the same website</p>
     <pre>
         &lt;!DOCTYPE html&gt;
         &lt;html lang="en"&gt;
@@ -29,14 +33,13 @@
                 &lt;title>HTML Exercise 2 Solution 10 &lt;/title&gt;
             &lt;/head&gt;
             &lt;body&gt;
-                &lt;p&gt;This is a &lt;sub&gt;Subscripted text &lt;/sub&gt;&lt;/p&gt;
-                &lt;p&gt;This is a &lt;sup&gt;Superscripted text &lt;/sup&gt;&lt;/p&gt;
+                &lt;a href="anotherpage.html"&gt;Link to another page on same website&lt;/a&gt;
             &lt;/body&gt;
         &lt;/html&gt;
     </pre>
     <h3>Output</h3>
-    <p>This is a <sub>Subscripted</sub> text</p>
-    <p>This is a <sup>Superscripted</sup> text</p>
+    <a href="anotherpage.html">Link to another page on same website</a>
+    <br>
     <br>
     <a href="index.html">Back to Exercises</a>
 </body>
