--- a/exercise11.html
+++ b/exercise11.html
@@ -9,17 +9,21 @@
             background-color: #5c92fd;
             color: white !important;
         }
+        @media(max-width:576px){
+            pre{
+                width: fit-content;
+            }
+        }
     </style>
 </head>
 <body>
-    <h2>HTML Exercise 2 Solution 11 - Experimenting Subscript and Superscript tags</h2>
+    <h2>HTML Exercise 2 Solution 11 - Opening a link in another tab</h2>
     <br>
     <h3>Exercise</h3>
-    <p>Experiment with the subscript and superscript tags.</p>
+    <p>Create a link that opens a new tab when clicked.</p>
     <br>
     <h3>Solution</h3>
-    <p>To use Subscript in HTML you use the sub element ( &lt;sub&gt; &lt;/sub&gt; ) </p>
-    <p>To use Superscript in HTML you use the sup element ( &lt;sup&gt; &lt;/sup&gt; ) </p>
+    <p>The anchor element ( &lt;a&gt; &lt;/a&gt; ) is used to set up links. To make your link open in a new tab you use an attribute called target. To make it open in a new tab you should set the target to underscore blank (target="_blank")</p>
     <pre>
         &lt;!DOCTYPE html&gt;
         &lt;html lang="en"&gt;
@@ -29,14 +33,13 @@
                 &lt;title>HTML Exercise 2 Solution 11 &lt;/title&gt;
             &lt;/head&gt;
             &lt;body&gt;
-                &lt;p&gt;This is a &lt;sub&gt;Subscripted text &lt;/sub&gt;&lt;/p&gt;
-                &lt;p&gt;This is a &lt;sup&gt;Superscripted text &lt;/sup&gt;&lt;/p&gt;
+                &lt;a href="https://www.w3schools.com/" target="_blank"&gt;Open Link in a new tab&lt;/a&gt;
             &lt;/body&gt;
         &lt;/html&gt;
     </pre>
     <h3>Output</h3>
-    <p>This is a <sub>Subscripted</sub> text</p>
-    <p>This is a <sup>Superscripted</sup> text</p>
+    <a href="https://www.w3schools.com/" target="_blank">Open Link in a new tab</a>
+    <br>
     <br>
     <a href="index.html">Back to Exercises</a>
 </body>
