--- a/exercise5.html
+++ b/exercise5.html
@@ -9,6 +9,11 @@
             background-color: #5c92fd;
             color: white !important;
         }
+        @media(max-width:576px){
+            pre{
+                width: fit-content;
+            }
+        }
     </style>
 </head>
 <body>
