--- a/exercise19.html
+++ b/exercise19.html
@@ -17,14 +17,13 @@
     </style>
 </head>
 <body>
-    <h2>HTML Exercise 2 Solution 19 - Experimenting Subscript and Superscript tags</h2>
+    <h2>HTML Exercise 2 Solution 19 - Using alt attribute to provide alternative text to an Image</h2>
     <br>
     <h3>Exercise</h3>
-    <p>Experiment with the subscript and superscript tags.</p>
+    <p>Use the alt attribute to provide alternative text for an image.</p>
     <br>
     <h3>Solution</h3>
-    <p>To use Subscript in HTML you use the sub element ( &lt;sub&gt; &lt;/sub&gt; ) </p>
-    <p>To use Superscript in HTML you use the sup element ( &lt;sup&gt; &lt;/sup&gt; ) </p>
+    <p>To add the alt attribute to your Image you add the alt attribute (alt="") to your image element ( &lt;img /&gt;). The essence of the alt attribute is to give an alternative title that describes the image if it doesn't fully load for the user</p>
     <pre>
         &lt;!DOCTYPE html&gt;
         &lt;html lang="en"&gt;
@@ -34,14 +33,15 @@
                 &lt;title>HTML Exercise 2 Solution 19 &lt;/title&gt;
             &lt;/head&gt;
             &lt;body&gt;
-                &lt;p&gt;This is a &lt;sub&gt;Subscripted text &lt;/sub&gt;&lt;/p&gt;
-                &lt;p&gt;This is a &lt;sup&gt;Superscripted text &lt;/sup&gt;&lt;/p&gt;
+                &lt;img src="htmllogo.png" alt="HTML Logo" /&gt;
+                &lt;img src="htmllogo" alt="HTML Logo" /&gt;
             &lt;/body&gt;
         &lt;/html&gt;
     </pre>
     <h3>Output</h3>
-    <p>This is a <sub>Subscripted</sub> text</p>
-    <p>This is a <sup>Superscripted</sup> text</p>
+    <img src="htmllogo.png" alt="HTML Logo" width="200" />
+    <img src="htmllogo" alt="HTML Logo" width="200" />
+    <br>
     <br>
     <a href="index.html">Back to Exercises</a>
 </body>
