--- a/exercise20.html
+++ b/exercise20.html
@@ -17,14 +17,13 @@
     </style>
 </head>
 <body>
-    <h2>HTML Exercise 2 Solution 20 - Experimenting Subscript and Superscript tags</h2>
+    <h2>HTML Exercise 2 Solution 20 - Resizing Image with height and width attribute</h2>
     <br>
     <h3>Exercise</h3>
-    <p>Experiment with the subscript and superscript tags.</p>
+    <p>Apply the width and height attributes to resize an image.</p>
     <br>
     <h3>Solution</h3>
-    <p>To use Subscript in HTML you use the sub element ( &lt;sub&gt; &lt;/sub&gt; ) </p>
-    <p>To use Superscript in HTML you use the sup element ( &lt;sup&gt; &lt;/sup&gt; ) </p>
+    <p>To resize an image with HTML you use the height and width attribute. To add the height and width attribute to your Image you add the both attribute (height="" width="") to your image element ( &lt;img /&gt;).</p>
     <pre>
         &lt;!DOCTYPE html&gt;
         &lt;html lang="en"&gt;
@@ -34,14 +33,13 @@
                 &lt;title>HTML Exercise 2 Solution 20 &lt;/title&gt;
             &lt;/head&gt;
             &lt;body&gt;
-                &lt;p&gt;This is a &lt;sub&gt;Subscripted text &lt;/sub&gt;&lt;/p&gt;
-                &lt;p&gt;This is a &lt;sup&gt;Superscripted text &lt;/sup&gt;&lt;/p&gt;
+                &lt;img src="htmllogo.png" alt="HTML Logo" height="200" width="200" /&gt;
             &lt;/body&gt;
         &lt;/html&gt;
     </pre>
     <h3>Output</h3>
-    <p>This is a <sub>Subscripted</sub> text</p>
-    <p>This is a <sup>Superscripted</sup> text</p>
+    <img src="htmllogo.png" alt="HTML Logo" height="200" width="200" />
+    <br>
     <br>
     <a href="index.html">Back to Exercises</a>
 </body>
