--- a/exercise22.html
+++ b/exercise22.html
@@ -17,14 +17,13 @@
     </style>
 </head>
 <body>
-    <h2>HTML Exercise 2 Solution 22 - Experimenting Subscript and Superscript tags</h2>
+    <h2>HTML Exercise 2 Solution 22 - Adding placeholder to an input field</h2>
     <br>
     <h3>Exercise</h3>
-    <p>Experiment with the subscript and superscript tags.</p>
+    <p>Add a placeholder attribute to an input field.</p>
     <br>
     <h3>Solution</h3>
-    <p>To use Subscript in HTML you use the sub element ( &lt;sub&gt; &lt;/sub&gt; ) </p>
-    <p>To use Superscript in HTML you use the sup element ( &lt;sup&gt; &lt;/sup&gt; ) </p>
+    <p>To add the placeholder attribute to your input, you add the placeholder attribute (placeholder="") to your input element ( &lt;input /&gt;). The essence of the placeholder attribute is to give an alternative title that describes the input or instruction that goes off once the user inputs into the form</p>
     <pre>
         &lt;!DOCTYPE html&gt;
         &lt;html lang="en"&gt;
@@ -34,14 +33,13 @@
                 &lt;title>HTML Exercise 2 Solution 22 &lt;/title&gt;
             &lt;/head&gt;
             &lt;body&gt;
-                &lt;p&gt;This is a &lt;sub&gt;Subscripted text &lt;/sub&gt;&lt;/p&gt;
-                &lt;p&gt;This is a &lt;sup&gt;Superscripted text &lt;/sup&gt;&lt;/p&gt;
+                &lt;input placeholder="Name:" /&gt;
             &lt;/body&gt;
         &lt;/html&gt;
     </pre>
     <h3>Output</h3>
-    <p>This is a <sub>Subscripted</sub> text</p>
-    <p>This is a <sup>Superscripted</sup> text</p>
+    <input placeholder="Name:" />
+    <br>
     <br>
     <a href="index.html">Back to Exercises</a>
 </body>
